--- a/templates/item/mpstorage-sheet.html
+++ b/templates/item/mpstorage-sheet.html
@@ -17,15 +17,15 @@
         {{!-- Attributes Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
             <div class="form-group">
-                <label class="label-text">{{localize "RQG.MAXMP"}}</label>
+                <label class="label-text">{{localize "RQG.MaxMP"}}</label>
                 <input  class="attribute-value"  type="text"  name="data.maxmp"  value="{{data.maxmp}}"  data-dtype="Number"  />
             </div>
             <div class="form-group">
-                <label class="label-text">{{localize "RQG.CURRENTMP"}}</label>
+                <label class="label-text">{{localize "RQG.CurrentMP"}}</label>
                 <input  class="attribute-value"  type="text"  name="data.currentmp"  value="{{data.currentmp}}"  data-dtype="Number"  />
             </div>
             <div class="form-group">
-                <label class="label-text">{{localize "Equiped"}}</label>
+                <label class="label-text">{{localize "RQG.Equiped"}}</label>
                 <input type="checkbox" name="data.equiped" {{checked data.equiped}}/>
             </div>              
         </div>
