--- a/templates/actor/parts/actor-magic.html
+++ b/templates/actor/parts/actor-magic.html
@@ -9,8 +9,8 @@
         </li>
         {{#each data.spells.spirit as |spell id|}}
             <li class="item flexrow" data-item-id="{{spell._id}}" data-spellname="{{spell.name}}">
-                <h4 class="item-name"><a class="spiritspell-roll">{{spell.name}}</a></h4>
-                <h4 class="item-name"><a class="spiritspell-roll">{{spell.data.mpcost}}</a></h4>
+                <h4 class="item-name"><a class="spiritspell-roll" data-item-id="{{spell._id}}">{{spell.name}}</a></h4>
+                <h4 class="item-name"><a class="spiritspell-roll" data-item-id="{{spell._id}}">{{spell.data.mpcost}}</a></h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
