--- a/templates/actor/parts/actor-runesandpassions.html
+++ b/templates/actor/parts/actor-runesandpassions.html
@@ -71,7 +71,7 @@
                     <tr class="item" data-item-id="{{passion._id}}" data-passionname="{{passion.name}}">
                         <td class="summary-passion-label"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.name}}</a></td>
                         <td class="summary-passion-value"><a class="passion-roll" data-item-id="{{passion._id}}">{{passion.data.data.total}}</a></td>
-                        <td class="item summary-passion-check" data-itemid="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
+                        <td class="item summary-passion-check" data-item-id="{{passion._id}}"><input class="passion-experience" id="{{id}}_{{passion._id}}_passion_skill" type="checkbox" name="data.experience" {{checked passion.data.data.experience}}/></td>                         
                         <td class="item-controls summary-passion-button">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                             <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
