fix cult display

--- a/templates/actor/parts/actor-magic.html
+++ b/templates/actor/parts/actor-magic.html
@@ -33,7 +33,7 @@
                 <h4 class="item-name">{{cult.name}}</h4>
                 <h4 class="item-name">{{cult.data.rank}}</h4>
                 <h4 class="item-name">{{cult.data.subcult}}</h4>
-                <h4 class="item-name">{{cult.data.currentrunepoint}} / {{cult.data.maxrunepoint}}</h4>
+                <h4 class="item-name">{{cult.data.data.currentrunepoint}} / {{cult.data.data.maxrunepoint}}</h4>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                     <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
