Fixed nasty bug on attacks - ready for v0.1.8

--- a/templates/actor/parts/actor-backstory.html
+++ b/templates/actor/parts/actor-backstory.html
@@ -22,6 +22,7 @@
         </tbody>
     </table>    
 </div>
+{{editor content=data.biography target="data.biography" button=true owner=owner editable=editable}}
 <div class="summary-general-list">
     <table border="2">
         <colgroup>
