--- a/templates/actor/parts/actor-combat.html
+++ b/templates/actor/parts/actor-combat.html
@@ -29,5 +29,5 @@
 {{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.melee attacktype="melee" attacklabel="RQG.MeleeAttacks"}}
 {{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.missile  attacktype="missile" attacklabel="RQG.MissileAttacks"}}
 {{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.natural attacktype="natural" attacklabel="RQG.NaturalAttacks"}}
-
+{{> "systems/runequest/templates/actor/parts/actor-partial-attacks.html" attacks=data.attacks.spirit attacktype="spirit" attacklabel="RQG.SpiritCombatAttacks"}}
 
