--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -1,10 +1,10 @@
 <form class="{{cssClass}}" autocomplete="off">
     {{ log cssClass }}
     {{!-- Sheet Header --}}
-    {{> "systems/runequest/templates/actor/parts/actor-sheetheader.html"}}
+    {{> "systems/runequest/templates/actor/parts/character/actor-sheetheader.html"}}
 
     {{!-- Sheet Tab Navigation --}}
-    <nav class="sheet-tabs tabs flexrow" data-group="primary">
+    <nav class="nav-sheet-tabs sheet-tabs tabs flexrow" data-group="primary">
         <a class="item" data-tab="skills">{{localize 'RQG.Skills'}}</a>
         <a class="item" data-tab="combat">{{localize 'RQG.Combat'}}</a>
         <!--
@@ -28,39 +28,39 @@
     </nav>
 
     {{!-- Sheet Body --}}
-    <section class="sheet-body section-padding">
+    <section class="sheet-body section-padding"  style="grid-area:main;">
         {{!-- Summary Tab --}}
         <div  class="tab summary"  data-group="primary"  data-tab="summary">
-            {{> "systems/runequest/templates/actor/parts/actor-summary.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-summary.html"}}
         </div> 
         {{!-- Magic Tab --}}
         <div  class="tab magic"  data-group="primary"  data-tab="magic">
-            {{> "systems/runequest/templates/actor/parts/actor-magic.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-magic.html"}}
         </div>
         <div  class="tab summary"  data-group="primary"  data-tab="herosoul">
-            {{> "systems/runequest/templates/actor/parts/actor-herosoul.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-herosoul.html"}}
         </div>         
         {{!-- Combat Tab --}}
         <div  class="tab combat"  data-group="primary"  data-tab="combat">
-            {{> "systems/runequest/templates/actor/parts/actor-combat.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-combat.html"}}
         </div>
         {{!-- Skills Tab --}}
         <div  class="tab skills"  data-group="primary"  data-tab="skills">
-            {{> "systems/runequest/templates/actor/parts/actor-skills.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-skills.html"}}
         </div>
 
         {{!-- Biography Tab --}}
         <div class="tab biography" data-group="primary" data-tab="description">
-            {{> "systems/runequest/templates/actor/parts/actor-backstory.html"}}            
+            {{> "systems/runequest/templates/actor/parts/character/actor-backstory.html"}}            
         </div>
 
         {{!-- Owned Items Tab --}}
         <div class="tab items" data-group="primary" data-tab="items">
-            {{> "systems/runequest/templates/actor/parts/actor-inventory.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-inventory.html"}}
         </div>
         {{!-- Attributes Tab --}}
         <div class="tab attributes" data-group="primary" data-tab="attributes">
-            {{> "systems/runequest/templates/actor/parts/actor-runesandpassions.html"}}
+            {{> "systems/runequest/templates/actor/parts/character/actor-runesandpassions.html"}}
         </div>
         {{!-- Flags Tab --}}
         <div class="tab flags" data-group="primary" data-tab="flags">
